fixing dark mode button

--- a/style/darkMode.css
+++ b/style/darkMode.css
@@ -13,6 +13,7 @@
   outline: none;
   border: none;
   box-shadow: 0 0 2rem rgba(28, 43, 255, 0.9);
+  cursor: pointer;
 }
 
 .btn-color-change {
